--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
